[project]
name = "extended-mind"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Fraser Mince", email = "frasermince@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "gymnasium<2.0.0,>=1.1.1",
    "minigrid<4.0.0,>=3.0.0",
    "numpy<3.0.0,>=2.2.4",
    "tyro<1.0.0,>=0.9.18",
    "tensorboard<3.0.0,>=2.19.0",
    "moviepy<3.0.0,>=2.1.2",
    "flax<1.0.0,>=0.10.6",
    "jax<1.0.0,>=0.6.2",
    "optax<1.0.0,>=0.2.4",
    "wandb<1.0.0,>=0.19.10",
    "matplotlib-inline>=0.1.7",
    "tensorboardx>=2.6.4",
    "matplotlib>=3.10.3",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pyarrow>=21.0.0",
    "duckdb>=1.4.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.6.2",
]
